--- a/config.toml
+++ b/config.toml
@@ -19,7 +19,7 @@ copyright = "&copy; 2019"
 googleAnalytics = ""
 
 # Enable comments by entering your Disqus shortname
-disqusShortname = "lescipi"
+disqusShortname = "https-lescipi-github-io"
 
 ############################
 ## Advanced options below ##
